Bug 151292 - Kopete crash (SIGSEGV) in Configuration > Device (périphérique in French)
Summary: Kopete crash (SIGSEGV) in Configuration > Device (périphérique in French)
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-24 18:38 UTC by rom1v
Modified: 2007-11-03 00:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rom1v 2007-10-24 18:38:52 UTC
Version:           Kopete from KDE 3.5.8 + msn patch : http://www.kdedevelopers.org/node/3041 (using KDE KDE 3.5.8)
Installed from:    Ubuntu Packages
OS:                Linux

When I launch Configuration > Device (périphérique in French), Kopete (KDE 3.5.8 + this patch : http://www.kdedevelopers.org/node/3041) crashes (SIGSEGV) :

(no debugging symbols found)
Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread -1241749008 (LWP 7026)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#6  0xffffe410 in __kernel_vsyscall ()
#7  0xb6021875 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb6023201 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb622c6e0 in __gnu_cxx::__verbose_terminate_handler ()
   from /usr/lib/libstdc++.so.6
#10 0xb6229f65 in ?? () from /usr/lib/libstdc++.so.6
#11 0xb6229fa2 in std::terminate () from /usr/lib/libstdc++.so.6
#12 0xb622a0ca in __cxa_throw () from /usr/lib/libstdc++.so.6
#13 0xb622a6fe in operator new () from /usr/lib/libstdc++.so.6
#14 0xb622a7dd in operator new[] () from /usr/lib/libstdc++.so.6
#15 0xb58acea1 in QValueVectorPrivate<unsigned char>::insert ()
   from /usr/lib/libkopete_videodevice.so.0
#16 0xb58ad13d in QValueVector<unsigned char>::insert ()
   from /usr/lib/libkopete_videodevice.so.0
#17 0xb58a9d5a in Kopete::AV::VideoDevice::setSize ()
   from /usr/lib/libkopete_videodevice.so.0
#18 0xb58aa222 in Kopete::AV::VideoDevicePool::setSize ()
   from /usr/lib/libkopete_videodevice.so.0
#19 0xb331401e in AVDeviceConfig::AVDeviceConfig ()
   from /usr/lib/kde3/kcm_kopete_avdeviceconfig.so
#20 0xb3316d3f in KGenericFactory<AVDeviceConfig, QWidget>::createObject ()
   from /usr/lib/kde3/kcm_kopete_avdeviceconfig.so
#21 0xb6eee251 in KLibFactory::create () from /usr/lib/libkdecore.so.4
#22 0xb7703442 in KCModuleLoader::load () from /usr/lib/libkutils.so.1
#23 0xb7704747 in KCModuleLoader::loadModule () from /usr/lib/libkutils.so.1
#24 0xb77050d5 in KCModuleProxy::realModule () from /usr/lib/libkutils.so.1
#25 0xb7706852 in KCModuleProxy::buttons () from /usr/lib/libkutils.so.1
#26 0xb77068f3 in KCMultiDialog::slotAboutToShow ()
   from /usr/lib/libkutils.so.1
#27 0xb7706ad8 in KCMultiDialog::qt_invoke () from /usr/lib/libkutils.so.1
#28 0xb6866893 in QObject::activate_signal () from /usr/lib/libqt-mt.so.3
#29 0xb71f89f1 in KDialogBase::aboutToShowPage () from /usr/lib/libkdeui.so.4
#30 0xb71f8bbb in KDialogBase::qt_emit () from /usr/lib/libkdeui.so.4
#31 0xb76ee8c6 in KCMultiDialog::qt_emit () from /usr/lib/libkutils.so.1
#32 0xb6866867 in QObject::activate_signal () from /usr/lib/libqt-mt.so.3
#33 0xb71f88be in KJanusWidget::aboutToShowPage () from /usr/lib/libkdeui.so.4
#34 0xb71f892c in KJanusWidget::qt_emit () from /usr/lib/libkdeui.so.4
#35 0xb6866994 in QObject::activate_signal () from /usr/lib/libqt-mt.so.3
#36 0xb6c1976f in QWidgetStack::aboutToShow () from /usr/lib/libqt-mt.so.3
#37 0xb69cfc6f in QWidgetStack::raiseWidget () from /usr/lib/libqt-mt.so.3
#38 0xb721bec2 in KJanusWidget::showPage () from /usr/lib/libkdeui.so.4
#39 0xb721c0c6 in KJanusWidget::showPage () from /usr/lib/libkdeui.so.4
#40 0xb71ddf6b in KJanusWidget::slotShowPage () from /usr/lib/libkdeui.so.4
#41 0xb721bd97 in KJanusWidget::qt_invoke () from /usr/lib/libkdeui.so.4
#42 0xb6866893 in QObject::activate_signal () from /usr/lib/libqt-mt.so.3
#43 0xb6867338 in QObject::activate_signal () from /usr/lib/libqt-mt.so.3
#44 0xb6c07e75 in QListBox::selectionChanged () from /usr/lib/libqt-mt.so.3
#45 0xb6954e67 in QListBox::setSelected () from /usr/lib/libqt-mt.so.3
#46 0xb6957d51 in QListBox::mousePressEventEx () from /usr/lib/libqt-mt.so.3
#47 0xb6958490 in QListBox::mousePressEvent () from /usr/lib/libqt-mt.so.3
#48 0xb689d644 in QWidget::event () from /usr/lib/libqt-mt.so.3
#49 0xb67fdaf0 in QApplication::internalNotify () from /usr/lib/libqt-mt.so.3
#50 0xb67ffcae in QApplication::notify () from /usr/lib/libqt-mt.so.3
#51 0xb6fc3ca2 in KApplication::notify () from /usr/lib/libkdecore.so.4
#52 0xb679027d in QApplication::sendSpontaneousEvent ()
   from /usr/lib/libqt-mt.so.3
#53 0xb678eee2 in QETWidget::translateMouseEvent ()
   from /usr/lib/libqt-mt.so.3
#54 0xb678cfcc in QApplication::x11ProcessEvent () from /usr/lib/libqt-mt.so.3
#55 0xb67a41a4 in QEventLoop::processEvents () from /usr/lib/libqt-mt.so.3
#56 0xb68181ce in QEventLoop::enterLoop () from /usr/lib/libqt-mt.so.3
#57 0xb6817fde in QEventLoop::exec () from /usr/lib/libqt-mt.so.3
#58 0xb67ff699 in QApplication::exec () from /usr/lib/libqt-mt.so.3
#59 0x0807f95c in ?? ()
#60 0xbf99dba4 in ?? ()
#61 0xbf99db9c in ?? ()
#62 0xbf99db94 in ?? ()
#63 0x00000000 in ?? ()
Comment 1 rom1v 2007-11-03 00:38:06 UTC
Resolved by a patch sended to me on jabber, see:
http://bugs.kde.org/show_bug.cgi?id=150115
Comment 2 Roman Jarosz 2007-11-03 00:54:23 UTC
Reopening so I can mark it as fixed
Comment 3 Roman Jarosz 2007-11-03 00:55:17 UTC
SVN commit 732161 by rjarosz:

Fix bug 151292: Kopete crash (SIGSEGV) in Configuration > Device
Always initialize min max values.

Big thanks to Romain Vimont for helping debug this!

BUG: 151292



 M  +4 -0      videodevice.cpp  


--- branches/KDE/3.5/kdenetwork/kopete/libkopete/avdevice/videodevice.cpp #732160:732161
@@ -39,6 +39,10 @@
 	m_streambuffers  = 0;
 	m_current_input = 0;
 //	kdDebug(14010) << "libkopete (avdevice): VideoDevice() exited successfuly" << endl;
+	maxwidth  = 32767;
+	maxheight = 32767;
+	minwidth  = 1;
+	minheight = 1;
 }