Fix bug 151292: Kopete crash (SIGSEGV) in Configuration > Device (périphérique in French) Always initialize min max values.

Big thanks to Romain Vimont for helping debug this!

BUG: 151292


svn path=/branches/KDE/3.5/kdenetwork/kopete/; revision=732161